feat: update Dockerfiles to use community images; enhance ResultExporters and related classes with category and runtime model fields